# nexttorrent

./: .prettierignore  ENGINE.md  README.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  todo.txt  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml
docs/: CODE_SIGNING.md  SECURITY.md  USER_GUIDE.md
scripts/: msix-build.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  diag_log.rs  disk.rs  engine.rs  ipc.rs  lib.rs  main.rs  paths.rs  queue_control.rs  rss.rs  scheduler.rs  settings.rs  startup_fail.rs  state.rs  torrent_commands.rs  validation.rs  watch_folder.rs
src-tauri/tests/: engine_smoke.rs  tauri_config.rs
src/components/: DebugOverlay.tsx  RateGraph.tsx  TorrentAddInvoke.test.tsx  TorrentWorkspace.tsx
src/ipc/: client.invoke.test.ts  client.ts  contracts.test.ts  contracts.ts  dialogPaths.test.ts  dialogPaths.ts  invokeError.test.ts  invokeError.ts  magnet.test.ts
src/utils/: format.ts
